app/sleep-export-serviceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata :
  name: sleep-export
spec:
  hosts:
  - api.jd.com
  ports:
  - number: 80
    name :  http
    protocol : HTTP
  resolution :  DNS
