app/sleep-export-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata :
  name: sleep-export-vs
spec:
  hosts:
  - api.jd.com
  http:
  - timeout: 2s
    route:
    - destination:
        host: api.jd.com
